--- a/style.css
+++ b/style.css
@@ -321,6 +321,7 @@ body {
 	grid-gap: 16px;
 	flex-wrap: wrap;
 }
+
 #content main .head-title .left h1 {
 	font-size: 36px;
 	font-weight: 600;
@@ -436,6 +437,9 @@ body {
 	cursor: pointer;
 }
 
+
+
+
 #content main .table-data .order {
 	flex-grow: 1;
 	flex-basis: 500px;
@@ -486,14 +490,66 @@ body {
 }
 
 
-#content main .table-data .todo {
+#content main .table-data .details {
 	flex-grow: 1;
 	flex-basis: 300px;
 }
-#content main .table-data .todo .todo-list {
+
+#content main .table-data .details table {
+	width: 100%;
+	border-collapse: collapse;
+}
+#content main .table-data .details table th {
+	padding-bottom: 12px;
+	font-size: 13px;
+	text-align: left;
+	border-bottom: 1px solid var(--grey);
+}
+#content main .table-data .details table td {
+	padding: 16px 0;
+}
+#content main .table-data .details table tr td:first-child {
+	display: flex;
+	align-items: center;
+	grid-gap: 12px;
+	padding-left: 6px;
+}
+#content main .table-data .details table td img {
+	width: 36px;
+	height: 36px;
+	border-radius: 50%;
+	object-fit: cover;
+}
+#content main .table-data .details table tbody tr:hover {
+	background: var(--grey);
+}
+#content main .table-data .details table tr td .status {
+	font-size: 10px;
+	padding: 6px 16px;
+	color: var(--light);
+	border-radius: 20px;
+	font-weight: 700;
+}
+#content main .table-data .details table tr td .status.instock {
+	background: var(--blue);
+}
+#content main .table-data .details table tr td .status.outofstock {
+	background: var(--yellow);
+}
+
+
+
+
+
+
+<!--#content main .table-data .details {
+	flex-grow: 1;
+	flex-basis: 300px;
+}
+#content main .table-data .details .product details {
 	width: 100%;
 }
-#content main .table-data .todo .todo-list li {
+#content main .table-data .details .product details item {
 	width: 100%;
 	margin-bottom: 16px;
 	background: var(--grey);
@@ -503,7 +559,7 @@ body {
 	justify-content: space-between;
 	align-items: center;
 }
-#content main .table-data .todo .todo-list li .bx {
+#content main .table-data .details .product details .bx {
 	cursor: pointer;
 }
 #content main .table-data .todo .todo-list li.completed {
@@ -514,7 +570,10 @@ body {
 }
 #content main .table-data .todo .todo-list li:last-child {
 	margin-bottom: 0;
+
+	
 }
+
 /* MAIN */
 /* CONTENT */
 
@@ -589,4 +648,5 @@ body {
 	#content main .table-data .todo .todo-list {
 		min-width: 420px;
 	}
+	
 }
