--- a/style.css
+++ b/style.css
@@ -573,6 +573,43 @@ body {
 
 	
 }
+#content main .analysis{
+	display: flex;
+	flex-wrap: wrap;
+	grid-gap: 24px;
+	margin-top: 24px;
+	width: 100%;
+	color: var(--dark);
+}
+#content main .analysis > div {
+	border-radius: 20px;
+	background: var(--light);
+	padding: 24px;
+	overflow-x: auto;
+}
+#content main .analysis .head {
+	display: flex;
+	align-items: center;
+	grid-gap: 16px;
+	margin-bottom: 24px;
+}
+#content main .analysis .head .bx {
+	cursor: pointer;
+
+}
+#content main .analysis .body {
+	width: 36px;
+	height: 36px;
+	border-radius: 50%;
+	object-fit: cover;
+}
+<!--#content main .table-data .analysis {
+	flex-grow: 1;
+	flex-basis: 300px;
+}
+#content main .table-data .analysis .thead {
+	width: 100%;
+}
 
 /* MAIN */
 /* CONTENT */
